# opposable

./: CMakeLists.txt  Makefile  ctap2.c  fido.c  scratch  scratch.c  sha256.c  test  test.c
scratch.dSYM/Contents/Resources/DWARF/: scratch
scratch.dSYM/Contents/Resources/Relocations/aarch64/: scratch.yml
test.dSYM/Contents/Resources/DWARF/: test
test.dSYM/Contents/Resources/Relocations/aarch64/: test.yml
