cmake_minimum_required(VERSION 3.13)

# initialize pico-sdk from GIT
# (note this can come from environment, CMake cache etc)
set(PICO_SDK_FETCH_FROM_GIT on)

# pico_sdk_import.cmake is a single file copied from this SDK
# note: this must happen before project()
include(pico_sdk_import.cmake)

project(scratch)

# initialize the Raspberry Pi Pico SDK
pico_sdk_init()

# rest of your project

add_executable(scratch
	scratch.c
)

target_link_libraries(scratch pico_stdlib)

pico_add_extra_outputs(scratch)
